--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -80,9 +80,10 @@
                 </app-input-error>
               </app-input-group>
 
-              <hr>
-
-              <app-lessor-form></app-lessor-form>
+              <ng-container *ngIf="isLessor">
+                <hr>
+                <app-lessor-form></app-lessor-form>
+              </ng-container>
 
               <button class="mt-5 btn btn-primary" class="btn btn-outline-primary mr-2" (click)="setEditProfile(false)">ยกเลิก</button>
               <button type="submit" class="btn btn-primary" [disabled]="vendorProfileForm.disabled" class="btn btn-primary">
