--- a/frontend-webapp/src/styles/global.scss
+++ b/frontend-webapp/src/styles/global.scss
@@ -76,6 +76,14 @@ $cdk-overlay-dark-backdrop-background: rgba(0, 0, 0, 0.3);
   @include font-weight(regular);
 }
 
+select {
+  -webkit-appearance: none;
+  border-radius: .1rem;
+  background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='#444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>") !important;
+  background-position: 100% 60% !important;
+  background-repeat: no-repeat !important;
+}
+
 input {
   box-shadow: none !important;
   &:focus {
