Move component to shared

--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -2,100 +2,7 @@
   <div class="offset-md-1 col-md-10">
     <h1>ข้อมูลส่วนตัว</h1>
 
-    <form [formGroup]="vendorProfileForm" (submit)="updateProfile()">
-      <div class="row mt-4">
-        <div class="col-md-6">
-          <div class="profile-img-wrapper d-block mx-auto">
-            <img class="img-fluid rounded" [src]="vendorProfile.profileImage">
-          </div>
-          <div *ngIf="isEdit" class="mt-3">
-            <div class="d-flex">
-              <app-file-input class="mx-auto d-block" formControlName="profileImage" label="เลือกรูปภาพ"></app-file-input>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <ng-container *ngIf="!isEdit">
-            <dl class="mt-3 mt-md-0">
-              <dt>อีเมล</dt>
-              <dd>{{ vendorProfile.email }}</dd>
-              <dt>ชื่อจริง</dt>
-              <dd>{{ vendorProfile.firstName }}</dd>
-              <dt>นามสกุล</dt>
-              <dd>{{ vendorProfile.lastName }}</dd>
-              <dt>เบอร์โทรศัพท์</dt>
-              <dd>{{ vendorProfile.phone }}</dd>
-            </dl>
-            <ng-container *ngIf="isLessor && lessorProfile">
-              <hr>
-              <h4 class="my-1">ข้อมูลผู้ให้เช่า</h4>
-              <dl class="mt-3">
-                <dt>ชื่อผู้ให้เช่า</dt>
-                <dd>{{ lessorProfile.lessorName }}</dd>
-                <dt>เป็นองค์กรหรือไม่</dt>
-                <dd>{{ lessorProfile.isOrganization ? 'เป็นองค์กร' : 'ไม่เป็นองค์กร' }}</dd>
-                <ng-container *ngIf="lessorProfile.isOrganization">
-                  <dt>ชื่อองค์กร</dt>
-                  <dd>{{ lessorProfile.organizationName }}</dd>
-                  <dt>ชื่อติดต่อในองค์กร</dt>
-                  <dd>{{ lessorProfile.organizationContactName }}</dd>
-                  <dt>อีเมลองค์กร</dt>
-                  <dd>{{ lessorProfile.organizationEmail }}</dd>
-                  <dt>เบอร์โทรติดต่อองค์กร</dt>
-                  <dd>{{ lessorProfile.organizationPhoneNumber }}</dd>
-                </ng-container>
-              </dl>
-            </ng-container>
-
-            <button class="btn btn-outline-danger" (click)="setEditProfile(true)">แก้ไขข้อมูล</button>
-          </ng-container>
-          <div *ngIf="isEdit">
-            <div>
-              <div class="mb-2">
-                <div class="title">อีเมล</div>
-                <input type="text" class="form-control" [value]="vendorProfile.email" disabled>
-              </div>
-
-              <app-input-group label="ชื่อจริง">
-                <input appInput type="text" class="form-control" formControlName="firstName" placeholder="ชื่อจริง">
-                <app-input-error *ngIf="vendorProfileForm.controls['firstName'].hasError('required')">
-                  กรุณากรอกชื่อผู้ให้เช่า
-                </app-input-error>
-              </app-input-group>
-
-              <app-input-group label="นามสกุล">
-                <input appInput type="text" class="form-control" formControlName="lastName" placeholder="นามสกุล">
-                <app-input-error *ngIf="vendorProfileForm.controls['lastName'].hasError('required')">
-                  กรุณากรอกนามสกุล
-                </app-input-error>
-              </app-input-group>
-
-              <app-input-group label="เบอร์โทรศัพท์">
-                <input appInput type="text" class="form-control" formControlName="phone" placeholder="เบอร์โทรศัพท์">
-                <app-input-error *ngIf="vendorProfileForm.controls['phone'].hasError('required')">
-                  กรุณากรอกเบอร์โทรศัพท์
-                </app-input-error>
-                <app-input-error *ngIf="vendorProfileForm.controls['phone'].hasError('pattern')">
-                  เบอร์โทรศัพท์ต้องอยู่ในรูป 0812345678
-                </app-input-error>
-              </app-input-group>
-
-              <ng-container *ngIf="isLessor">
-                <hr>
-                <app-lessor-form></app-lessor-form>
-              </ng-container>
-
-              <button class="mt-5 btn btn-primary" class="btn btn-outline-primary mr-2" (click)="setEditProfile(false)">ยกเลิก</button>
-              <button type="submit" class="btn btn-primary" [disabled]="vendorProfileForm.disabled" class="btn btn-primary">
-                บันทึกข้อมูล
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </form>
-
-    <!-- Vendor product section -->
+    <app-user-profile></app-user-profile>
 
     <hr />
     <app-vendor-product class="mt-5"></app-vendor-product>
