--- a/frontend-webapp/src/app/login/login.component.scss
+++ b/frontend-webapp/src/app/login/login.component.scss
@@ -1,3 +1,15 @@
+@import '~styles/common';
+
+h1 {
+  font-size: 2rem;
+  color: $primary;
+}
+
+hr {
+  margin-top: map-get($spacers, 4);
+  margin-bottom: map-get($spacers, 4);
+}
+
 .form-error {
   color: red;
 }
