--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -5,6 +5,6 @@
     <app-user-profile></app-user-profile>
 
     <hr />
-    <app-vendor-product class="mt-5"></app-vendor-product>
+    <app-user-product class="mt-5"></app-user-product>
   </div>
 </div>
