--- a/frontend-webapp/src/app/register/register.component.scss
+++ b/frontend-webapp/src/app/register/register.component.scss
@@ -1,5 +1,10 @@
 @import '~styles/common';
 
+h1 {
+  font-size: 2rem;
+  color: $primary;
+}
+
 .fb-card {
   border: 1px solid $light-gray;
   padding: map-get($spacers, 3) map-get($spacers, 4);
