Restyle of user product

--- a/frontend-webapp/src/app/shared/user/user-product/user-product.component.html
+++ b/frontend-webapp/src/app/shared/user/user-product/user-product.component.html
@@ -5,8 +5,10 @@
 <div *ngFor="let product of products; index as i" class="product-list">
   <div class="mb-2">
     <div class="d-flex flex-wrap align-items-center mt-3">
-      <div class="p-2">
-        {{ i + 1 }}
+      <div class="p-3 pl-4">
+        <strong>
+          {{ i + 1 }}
+        </strong>
       </div>
       <div class="p-2">
         <div class="thumb-img">
