--- a/frontend-webapp/src/app/shared/user/user-product/user-product.component.scss
+++ b/frontend-webapp/src/app/shared/user/user-product/user-product.component.scss
@@ -9,7 +9,7 @@
   border-radius: $border-radius * 2;
 
   .thumb-img img {
-    object-fit: contain;
+    object-fit: cover;
     object-position: center;
     max-width: 5em;
     max-height: 5em;
