--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -80,7 +80,7 @@
     <div class="section-title">
       <h2>ตลาดนัดชิวยามค่ำคืน</h2>
       <a class="link-with-icon" routerLink="/">
-        <div class="link-text">ดูทั้งหมด</div>
+        <div class="link-text"><a routerLink="/search" [queryParams]="{night: true}">ดูทั้งหมด</a></div>
         <div class="link-icon">
           <app-svg-icon key="arrow-head-right" width="8"></app-svg-icon>
         </div>
