--- a/frontend-webapp/src/app/vendor-dashboard/reservation/vendor-reservation.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/reservation/vendor-reservation.component.html
@@ -1,3 +1,7 @@
-<p>
-  vendor-reservation works!
-</p>
+<div class="row">
+    <div class="offset-md-1 col-md-10">
+      <h4>ข้อมูลการจองตลาดทั้งหมด</h4>
+
+      
+    </div>
+  </div>
