--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -98,7 +98,7 @@
     <div class="section-title">
       <h2>ตลาดฤดูหนาว</h2>
       <a class="link-with-icon" routerLink="/">
-        <div class="link-text">ดูทั้งหมด</div>
+        <div class="link-text"><a routerLink="/search" [queryParams]="{daterange: '2017-11-1/2018-2-28'}">ดูทั้งหมด</a></div>
         <div class="link-icon">
           <app-svg-icon key="arrow-head-right" width="8"></app-svg-icon>
         </div>
