--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -62,7 +62,7 @@
     <div class="section-title">
       <h2>ตลาดมาใหม่ไฟแรง</h2>
       <a class="link-with-icon" routerLink="/">
-        <div class="link-text">ดูทั้งหมด</div>
+        <div class="link-text"><a routerLink="/search" [queryParams]="{sortby: 'created_time'}">ดูทั้งหมด</a></div>
         <div class="link-icon">
           <app-svg-icon key="arrow-head-right" width="8"></app-svg-icon>
         </div>
