--- a/frontend-webapp/src/app/payment/upload-receipt/upload-receipt.component.html
+++ b/frontend-webapp/src/app/payment/upload-receipt/upload-receipt.component.html
@@ -4,7 +4,20 @@
       <div class="offset-md-1 col-md-10">
         <h4>อัพโหลดใบเสร็จ</h4>
 
+        <div class="mt-5"></div>
+
         <h5>ตลาด</h5>
+        <div></div>
+
+        <div class="mt-3"></div>
+
+        <div>กรุณาอัพโหลดใบเสร็จด้านล่าง</div>
+
+        <form [formGroup]="receiptForm" (submit)="uploadReceipt()">
+          <label>เลือกรูปใบเสร็จ</label>
+          <app-file-input formControlName="image" label="เลือกรูปภาพ"></app-file-input>
+          <button type="submit">ยืนยันการอัพโหลด</button>
+        </form>
       </div>
     </div>
   </div>
