Integrate data with api

--- a/frontend-webapp/src/app/vendor-dashboard/reservation/vendor-reservation.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/reservation/vendor-reservation.component.html
@@ -32,7 +32,7 @@
             {{ reserve.marketID }}
           </div>
           <div class="col-md-4 text-left text-md-center">
-            Test Market Name
+            {{ reserve.marketName }}
           </div>
           <div class="col-md-1 text-left text-md-center">
             {{ reserve.approvedBooth }}
