--- a/frontend-webapp/src/app/lessor-dashboard/payment-status/payment-status.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/payment-status/payment-status.component.html
@@ -16,65 +16,22 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">A1</th>
-            <td>Kasidit Iamthong</td>
-            <td><span class="badge pay-0">ยังไม่ได้ชำระเงิน</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A2</th>
-            <td>Kawin Liaowongphuthorn</td>
-            <td><span class="badge pay-100">ชำระเงินครบแล้ว</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A3</th>
-            <td>Poomarin Phloyaphisut</td>
-            <td><span class="badge pay-30">ชำระเงินแล้ว 30%</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A1</th>
-            <td>Kasidit Iamthong</td>
-            <td><span class="badge pay-30">ชำระเงินแล้ว 30%</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A2</th>
-            <td>Kawin Liaowongphuthorn</td>
-            <td><span class="badge pay-30">ชำระเงินแล้ว 30%</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A3</th>
-            <td>Poomarin Phloyaphisut</td>
-            <td><span class="badge pay-100">ชำระเงินครบแล้ว</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A1</th>
-            <td>Kasidit Iamthong</td>
-            <td><span class="badge pay-100">ชำระเงินครบแล้ว</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A2</th>
-            <td>Kawin Liaowongphuthorn</td>
-            <td><span class="badge pay-100">ชำระเงินครบแล้ว</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A3</th>
-            <td>Poomarin Phloyaphisut</td>
-            <td><span class="badge pay-100">ชำระเงินครบแล้ว</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A1</th>
-            <td>Kasidit Iamthong</td>
-            <td><span class="badge pay-0">ยังไม่ได้ชำระเงิน</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A2</th>
-            <td>Kawin Liaowongphuthorn</td>
-            <td><span class="badge pay-0">ยังไม่ได้ชำระเงิน</span></td>
-          </tr>
-          <tr>
-            <th scope="row">A3</th>
-            <td>Poomarin Phloyaphisut</td>
-            <td><span class="badge pay-0">ยังไม่ได้ชำระเงิน</span></td>
+          <tr *ngFor="let marketPaymentStatus of (marketPaymentStatus$ | async)">
+            <th scope="row">{{ marketPaymentStatus.boothNumber }}</th>
+            <td>{{ 'ยังไม่ได้เลือกผู้เช่าตลาด' || marketPaymentStatus.vendorName }}</td>
+            <ng-template [ngIf]="marketPaymentStatus.paymentStatus === 0" [ngIfElse]="pay30">
+              <td><span class="badge pay-0">ยังไม่ได้ชำระเงิน</span></td>
+            </ng-template>
+            <ng-template #pay30>
+              <ng-template [ngIf]="marketPaymentStatus.paymentStatus === 1" [ngIfElse]="pay100">
+                  <td><span class="badge pay-30">ชำระเงินแล้ว 30%</span></td>
+              </ng-template>
+            </ng-template>
+            <ng-template #pay100>
+              <ng-template [ngIf]="marketPaymentStatus.paymentStatus === 2">
+                  <td><span class="badge pay-100">ชำระเงินครบแล้ว</span></td>
+              </ng-template>
+            </ng-template>
           </tr>
         </tbody>
       </table>
