--- a/frontend-webapp/src/app/lessor-dashboard/manage-market/lessor-manage-market.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/manage-market/lessor-manage-market.component.html
@@ -1,13 +1,25 @@
 <div *ngIf="(lessorMarkets$ | async) as markets">
   <section class="mb-3">
     <div class="section-title">
-      <h2>ตลาดปัจจุบัน</h2>
-      <a class="link-with-icon" routerLink="../create-market">สร้างตลาดใหม่</a>
+      <h2>ตลาดที่ยังไม่ได้อนุมัติ</h2>
     </div>
 
     <div class="row">
-      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets.upcomingMarkets">
-        <app-market-item [market]="market"></app-market-item>
+      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets.unapproved">
+        <app-market-item [market]="market" [marketRouterLink]="['../approve', market.id]"></app-market-item>
+      </div>
+    </div>
+  </section>
+
+  <section class="mb-3">
+    <div class="section-title">
+      <a class="link-with-icon float-right" routerLink="../create-market">สร้างตลาดใหม่</a>
+      <h2>ตลาดปัจจุบัน</h2>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets.all.upcomingMarkets">
+        <app-market-item [market]="market" [marketRouterLink]="['../payment-status', market.id]"></app-market-item>
       </div>
     </div>
   </section>
@@ -18,7 +30,7 @@
     </div>
 
     <div class="row">
-      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets.passedMarkets">
+      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets.all.passedMarkets">
         <app-market-item [market]="market"></app-market-item>
       </div>
     </div>
