--- a/frontend-webapp/src/app/vendor-dashboard/reservation/vendor-reservation.component.scss
+++ b/frontend-webapp/src/app/vendor-dashboard/reservation/vendor-reservation.component.scss
@@ -1,5 +1,9 @@
 @import '~styles/common';
 
+a {
+  color: inherit;
+}
+
 .reserve-list>div {
   background: #F8F8F8;
   border-radius: $border-radius;
@@ -23,7 +27,7 @@
   .badge-approved, .badge-fully {
     background-color: #457c06;
   }
-  .badge-rejected {
+  .badge-rejected, .badge-unpaid {
     background-color: #960915;
   }
   .badge-cancelled, .badge-deposited {
